# StudyGuideWrapper

StudyGuideWrapper/: README.md
StudyGuideWrapper/project-deliverable-2-mm-s-team/: README.md
StudyGuideWrapper/project-deliverable-2-mm-s-team/code/backend/: CMakeLists.txt
StudyGuideWrapper/project-deliverable-2-mm-s-team/code/backend/src/: ContentProcessor.cpp  ContentProcessor.h  KeywordExtractor.cpp  KeywordExtractor.h  QuestionGenerator.cpp  QuestionGenerator.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  SocketManager.cpp  SocketManager.h  StudyPlanGenerator.cpp  StudyPlanGenerator.h  main.cpp
StudyGuideWrapper/project-deliverable-2-mm-s-team/code/frontend/: package.json
StudyGuideWrapper/project-deliverable-2-mm-s-team/code/frontend/study-guide-wrapper/src/: App.css  App.js
StudyGuideWrapper/project-deliverable-2-mm-s-team/code/frontend/study-guide-wrapper/src/components/: FileUpload.js  QuestionsDisplay.js  StudyPlan.js  SummaryDisplay.js
